Compiled with Jelly Bean and added compatibility codes.